--- a/source/_posts/关于h5页面在移动端的适配.md
+++ b/source/_posts/关于h5页面在移动端的适配.md
@@ -10,7 +10,7 @@ tags:
   - css
 comments: false
 ---
-最近为了学习egg，就用egg框架在重构一个微信小程序商城的后台的。这个项目几乎占用了我所有的业余时间，不过也算收获颇丰。现在还没做完，等做完后会发到仓库里面。也因为这个，很久没有发过blog。今天这篇blog的主题是h5页面在移动端的适配问题，这也算是自己做了一年的vue开发在这方面的一个总结吧。
+最近为了学习egg，就用egg框架在重构一个微信小程序商城的后台的。这个项目几乎占用了我所有的业余时间，不过也算收获颇丰，有兴趣的话可以到[**这个仓库**](https://github.com/aasailan/egg-nideshop)看看^^。也因为这个，很久没有发过blog。今天这篇blog的主题是h5页面在移动端的适配问题，
 
 ## 适配目标
 首先移动端的屏幕适配要达到的目标主要是以下两点：  
